--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2"
   }
 }
